--- a/moreapp/src/main/res/layout/item_more_app.xml
+++ b/moreapp/src/main/res/layout/item_more_app.xml
@@ -12,7 +12,6 @@
         android:id="@+id/movieThumbnail"
         android:layout_width="@dimen/movie_thumbnail_width"
         android:layout_height="@dimen/movie_thumbnail_height"
-
         android:layout_centerVertical="true" />
 
     <TextView
@@ -54,6 +53,7 @@
         android:layout_height="30dp"
         android:alpha="1"
         android:background="#4CAF50"
+        android:textColor="#ffffff"
         android:padding="@dimen/size_half_byte"
         android:layout_alignBottom="@+id/movieReleaseDate"
         android:layout_toLeftOf="@+id/movieReleaseDate"
